// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a CTABanner correctly when invalid icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

<a
    class="emotion-0"
    href="https://university.mongodb.com/"
  />
  .emotion-0 {
  background-color: #E1F2F6;
  border: 1px solid #C5E4F2;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  font-size: 14px;
  padding: 9px 12px 9px 20px;
  color: #1A567E;
  margin: 24px 0px;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0>p {
  margin-left: 35px;
}

.emotion-1 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-2 {
  width: 26px;
  height: 26px;
  background-color: #C5E4F2;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #007CAD;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-5 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-7 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-7 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-7 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-8 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="https://university.mongodb.com/"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Play Icon"
          class="emotion-3"
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.779 6.704a1.5 1.5 0 010 2.592l-7.523 4.388A1.5 1.5 0 014 12.388V3.612a1.5 1.5 0 012.256-1.296l7.523 4.388z"
            fill="currentColor"
          />
        </svg>
      </div>
    </a>
    <p>
      <a
        class="emotion-1"
        href="https://university.mongodb.com/"
      >
        If you prefer learning through videos, try this lesson on 
      </a>
      <a
        class="emotion-5 emotion-6"
        data-leafygreen-ui="anchor-container"
        href="https://university.mongodb.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-7"
        >
          MongoDB University
        </span>
        <svg
          alt=""
          aria-hidden="true"
          class="emotion-8"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
            fill="currentColor"
          />
          <path
            d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when lowercase icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

<a
    class="emotion-0"
    href="https://university.mongodb.com/"
  />
  .emotion-0 {
  background-color: #E1F2F6;
  border: 1px solid #C5E4F2;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  font-size: 14px;
  padding: 9px 12px 9px 20px;
  color: #1A567E;
  margin: 24px 0px;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0>p {
  margin-left: 35px;
}

.emotion-1 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-2 {
  width: 26px;
  height: 26px;
  background-color: #C5E4F2;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #007CAD;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-5 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-7 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-7 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-7 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-8 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="https://university.mongodb.com/"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Bell Icon"
          class="emotion-3"
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.625 6.138a4.656 4.656 0 00-3.268-3.925C9.228 1.52 8.67 1 8 1c-.67 0-1.228.52-1.357 1.213a4.656 4.656 0 00-3.268 3.925l-.452 3.963h.026a.95.95 0 000 1.899h10.102a.95.95 0 000-1.899h.026l-.452-3.963zM8 15a2 2 0 01-2-2h4a2 2 0 01-2 2z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </a>
    <p>
      <a
        class="emotion-1"
        href="https://university.mongodb.com/"
      >
        If you prefer learning through videos, try this lesson on 
      </a>
      <a
        class="emotion-5 emotion-6"
        data-leafygreen-ui="anchor-container"
        href="https://university.mongodb.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-7"
        >
          MongoDB University
        </span>
        <svg
          alt=""
          aria-hidden="true"
          class="emotion-8"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
            fill="currentColor"
          />
          <path
            d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when no icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

<a
    class="emotion-0"
    href="https://university.mongodb.com/"
  />
  .emotion-0 {
  background-color: #E1F2F6;
  border: 1px solid #C5E4F2;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  font-size: 14px;
  padding: 9px 12px 9px 20px;
  color: #1A567E;
  margin: 24px 0px;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0>p {
  margin-left: 35px;
}

.emotion-1 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-2 {
  width: 26px;
  height: 26px;
  background-color: #C5E4F2;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #007CAD;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-5 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-7 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-7 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-7 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-8 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="https://university.mongodb.com/"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Play Icon"
          class="emotion-3"
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.779 6.704a1.5 1.5 0 010 2.592l-7.523 4.388A1.5 1.5 0 014 12.388V3.612a1.5 1.5 0 012.256-1.296l7.523 4.388z"
            fill="currentColor"
          />
        </svg>
      </div>
    </a>
    <p>
      <a
        class="emotion-1"
        href="https://university.mongodb.com/"
      >
        If you prefer learning through videos, try this lesson on 
      </a>
      <a
        class="emotion-5 emotion-6"
        data-leafygreen-ui="anchor-container"
        href="https://university.mongodb.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-7"
        >
          MongoDB University
        </span>
        <svg
          alt=""
          aria-hidden="true"
          class="emotion-8"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
            fill="currentColor"
          />
          <path
            d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when non-default icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

<a
    class="emotion-0"
    href="https://university.mongodb.com/"
  />
  .emotion-0 {
  background-color: #E1F2F6;
  border: 1px solid #C5E4F2;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  font-size: 14px;
  padding: 9px 12px 9px 20px;
  color: #1A567E;
  margin: 24px 0px;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0>p {
  margin-left: 35px;
}

.emotion-1 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-2 {
  width: 26px;
  height: 26px;
  background-color: #C5E4F2;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #007CAD;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-3 {
  color: #007CAD;
}

.emotion-5 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-7 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-7 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-7 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-8 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="https://university.mongodb.com/"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="University Icon"
          class="emotion-3"
          fill="none"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 4.613c0-.383.191-.74.51-.953a6.87 6.87 0 012.145-.949l2.406-.601a.353.353 0 01.439.342v7.88c0 .238 0 .357-.043.453a.5.5 0 01-.176.211c-.087.06-.204.081-.438.123l-3.9.71c-.324.058-.486.088-.612.042a.5.5 0 01-.264-.22c-.067-.116-.067-.28-.067-.61V4.613zM2 2.452c0-.23.216-.398.439-.342l2.407.601a6.87 6.87 0 012.144.95c.319.211.51.569.51.952v6.428c0 .33 0 .494-.067.61a.5.5 0 01-.264.22c-.126.046-.288.016-.612-.043l-3.9-.709c-.234-.042-.35-.063-.438-.123a.5.5 0 01-.176-.21C2 10.688 2 10.57 2 10.331v-7.88zM2.008 12.41a.5.5 0 01.581-.402l5.143.935c.177.032.359.032.536 0l5.143-.935a.5.5 0 01.178.984l-4.134.752c-.163.434-.753.756-1.455.756-.702 0-1.292-.322-1.455-.756l-4.134-.752a.5.5 0 01-.403-.581z"
            fill="currentColor"
          />
        </svg>
      </div>
    </a>
    <p>
      <a
        class="emotion-1"
        href="https://university.mongodb.com/"
      >
        If you prefer learning through videos, try this lesson on 
      </a>
      <a
        class="emotion-5 emotion-6"
        data-leafygreen-ui="anchor-container"
        href="https://university.mongodb.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-7"
        >
          MongoDB University
        </span>
        <svg
          alt=""
          aria-hidden="true"
          class="emotion-8"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
            fill="currentColor"
          />
          <path
            d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</DocumentFragment>
`;
